syntax = "proto3";
package com.omniview.pluginsdk;

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

option go_package = "./proto";

// ===================== ENUMS ===================== //

enum MetricUnit {
  METRIC_UNIT_NONE = 0;
  METRIC_UNIT_BYTES = 1;
  METRIC_UNIT_KB = 2;
  METRIC_UNIT_MB = 3;
  METRIC_UNIT_GB = 4;
  METRIC_UNIT_PERCENTAGE = 5;
  METRIC_UNIT_MILLISECONDS = 6;
  METRIC_UNIT_SECONDS = 7;
  METRIC_UNIT_COUNT = 8;
  METRIC_UNIT_OPS_PER_SEC = 9;
  METRIC_UNIT_BYTES_PER_SEC = 10;
  METRIC_UNIT_MILLICORES = 11;
  METRIC_UNIT_CORES = 12;
}

enum MetricShape {
  METRIC_SHAPE_CURRENT = 0;
  METRIC_SHAPE_TIMESERIES = 1;
  METRIC_SHAPE_AGGREGATE = 2;
}

enum MetricStreamCommand {
  METRIC_STREAM_COMMAND_SUBSCRIBE = 0;
  METRIC_STREAM_COMMAND_UNSUBSCRIBE = 1;
  METRIC_STREAM_COMMAND_CLOSE = 2;
}

// ===================== CORE TYPES ===================== //

message MetricProviderInfo {
  string id = 1;
  string name = 2;
  string icon = 3;
  string description = 4;
}

message MetricColorRange {
  double min = 1;
  double max = 2;
  string color = 3;
}

message MetricDescriptor {
  string id = 1;
  string name = 2;
  MetricUnit unit = 3;
  string icon = 4;
  repeated MetricColorRange color_ranges = 5;
  string format_string = 6;
  repeated MetricShape supported_shapes = 7;
  string chart_group = 8;
}

message MetricHandler {
  string resource = 1;
  repeated MetricDescriptor metrics = 2;
}

// ===================== DATA TYPES ===================== //

message DataPoint {
  google.protobuf.Timestamp timestamp = 1;
  double value = 2;
  map<string, string> labels = 3;
}

message TimeSeries {
  string metric_id = 1;
  repeated DataPoint data_points = 2;
  map<string, string> labels = 3;
}

message CurrentValue {
  string metric_id = 1;
  double value = 2;
  google.protobuf.Timestamp timestamp = 3;
  map<string, string> labels = 4;
}

message AggregateValue {
  string metric_id = 1;
  double min = 2;
  double max = 3;
  double avg = 4;
  double sum = 5;
  double p50 = 6;
  double p90 = 7;
  double p99 = 8;
  int64 count = 9;
  google.protobuf.Duration window = 10;
  map<string, string> labels = 11;
}

message MetricResult {
  oneof result {
    TimeSeries time_series = 1;
    CurrentValue current_value = 2;
    AggregateValue aggregate_value = 3;
  }
}

// ===================== REQUESTS/RESPONSES ===================== //

message GetSupportedMetricResourcesResponse {
  MetricProviderInfo provider = 1;
  repeated MetricHandler handlers = 2;
}

message QueryMetricsRequest {
  string resource_key = 1;
  string resource_id = 2;
  string resource_namespace = 3;
  google.protobuf.Struct resource_data = 4;
  repeated string metric_ids = 5;
  MetricShape shape = 6;
  google.protobuf.Timestamp start_time = 7;
  google.protobuf.Timestamp end_time = 8;
  google.protobuf.Duration step = 9;
  map<string, string> params = 10;
}

message QueryMetricsResponse {
  bool success = 1;
  repeated MetricResult results = 2;
  string error = 3;
}

// ===================== STREAMS ===================== //

message MetricStreamInput {
  string subscription_id = 1;
  MetricStreamCommand command = 2;
  string resource_key = 3;
  string resource_id = 4;
  string resource_namespace = 5;
  google.protobuf.Struct resource_data = 6;
  repeated string metric_ids = 7;
  google.protobuf.Duration interval = 8;
}

message MetricStreamOutput {
  string subscription_id = 1;
  repeated MetricResult results = 2;
  google.protobuf.Timestamp timestamp = 3;
  string error = 4;
}

// ===================== SERVICE ===================== //

service MetricPlugin {
  rpc GetSupportedResources(google.protobuf.Empty) returns (GetSupportedMetricResourcesResponse);
  rpc Query(QueryMetricsRequest) returns (QueryMetricsResponse);
  rpc StreamMetrics(stream MetricStreamInput) returns (stream MetricStreamOutput);
}
